# Claude-Shifter

./: CMakeLists.txt  LICENSE  PolyphonicPitchShifter.cpp  PolyphonicPitchShifter.h  PolyphonicPitchShifterVersion.h  README.md  build_instructions.txt  cmake_file.txt  compile_online_script.sh  info.plist  pitch_shifter_resource.r  polyphonic_pitch_shifter.cpp  polyphonic_pitch_shifter.h
.github/workflows/: macos-build.yml
